--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@picocss/pico": "^1.5.3",
+    "pico": "^0.1.17"
   }
 }
